# release-bot

./: .gitignore  .release_tool.toml  DEVELOPMENT.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/releases/: 0.0.1-rc.0.md  0.0.1.md  0.0.2-rc.2.md  0.0.3-rc.0.md
src/: main.py  requirements.txt
tests/: test_cancel_command.py  test_get_version_from_drafts.py  test_initial_comment.py  test_pr_merge_detection.py  test_resolve_version.py  test_run_command.py  test_run_pull.py
